--- a/client/package.json
+++ b/client/package.json
@@ -15,11 +15,13 @@
     "@rebass/forms": "^4.0.6",
     "@rebass/preset": "^4.0.5",
     "@reduxjs/toolkit": "^1.9.3",
+    "axios": "^1.3.4",
     "emotion-theming": "^11.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
-    "rebass": "^4.0.7"
+    "rebass": "^4.0.7",
+    "redux-saga": "^1.2.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
