--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,9 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "rebass": "^4.0.7",
-    "redux-saga": "^1.2.2"
+    "redux-saga": "^1.2.2",
+    "styled-components": "^5.3.8",
+    "styled-system": "^5.1.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
